Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-15447

Our source code has codepage problem

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.13
    • None
    • None

    Description

      There is codepage problem in our source code. This problem causes the non-Latin developers' difficulty in building ReactOS on MSVC.

      modules/rostests/apitests/ntdll/RtlGenerate8dot3Name.c  : UTF-8
      dll/keyboard/kbdrost/kbdrost.c  : UTF-8
      base/setup/usetup/lang/muilanguages.h  : MIXED
      

      Attachments

        1. code7bit.zip
          900 kB
        2. code7bit.zip
          900 kB
        3. code7bit.zip
          698 kB
        4. codepage-warnings.png
          codepage-warnings.png
          48 kB
        5. japanese-build-ok.png
          japanese-build-ok.png
          66 kB
        6. japanese-ok.png
          japanese-ok.png
          6 kB
        7. msvc-error-list-after.txt
          263 kB
        8. success.png
          success.png
          58 kB

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              katayama_hirofumi_mz Katayama Hirofumi MZ
              Votes:
              2 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: