[KBDROST][NTDLL_APITEST] Revert #1135 (Delete UTF-8 BOM) (#1149)

CORE-15447